Fixed the review-carousel hight issue on mobile screen size

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -195,23 +195,6 @@ footer .row {
 }
 
 
-/*
-.cloud {
-    background: white;
-    padding: 30px 20px;
-    text-align: center;
-    width: 100% !important;
-    padding: 40px 25px;
-
-    margin: 0 auto;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    clip-path: path("M50 150 Q30 120 60 110 Q40 80 80 80 Q90 40 130 60 Q170 20 200 60 Q240 50 240 100 Q270 110 240 140 Q200 170 150 150 Q120 180 80 160 Q60 170 50 150 Z");
-}
-*/
 
 /*-----------------------------------------*/
 
@@ -296,13 +279,17 @@ a.nav-link {
     font-family: var(--secondary-font);
 }
   
+#reviewCarousel .carousel-item {
+    height: auto !important;
+   
+}
 
 .carousel-inner {
     border-radius: 30px;
     height: 100%;
 }
 
-.carousel-item {
+.carousel-item{
     height: 200px;
     overflow: hidden;
 }
@@ -414,6 +401,20 @@ iframe {
         height: 300px;
         overflow: hidden;
     }
+
+    .carousel-index{
+        height: 300px;
+        overflow: hidden;
+    }
+    .index-h5{
+        font-size: 28px !important;
+    }
+
+    .index-written-content p{
+        font-size: 18px !important;
+        
+    }
+
    
 }
 
@@ -478,6 +479,20 @@ iframe {
     .carousel-item {
         height: 400px;
         overflow: hidden;
+    }
+
+    .carousel-index{
+        height: 400px;
+        overflow: hidden;
+    }
+
+    .index-h5{
+        font-size: 42px !important;
+    }
+
+    .index-written-content p{
+        font-size: 26px !important;
+        
     }
 }
 
